# modbus-tui-receiver

./: Cargo.toml  README.md
src/: modbus_reader.rs  modbus_server.rs
